--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
       <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>bom</artifactId>
-        <version>2.17.82</version>
+        <version>2.17.157</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -238,6 +238,9 @@
             <version>6.5.0</version>
             <configuration>
               <failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
+              <suppressionFiles>
+                <suppressionFile>${project.basedir}/owasp-dep-check-suppression.xml</suppressionFile>
+              </suppressionFiles>
             </configuration>
             <executions>
               <execution>
